# earth-exploration

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_search_download_asf_data.ipynb  02_plot_maps_data.ipynb  2024-11-02 earth-engine-explore.ipynb  2024-11-03 asf-search-SAR-mapping.ipynb  2024-11-23 develop-asf-data-structure.ipynb  2024-12-28 use-sertit-for-georeferencing.ipynb  2024-12-29 georeference-asf-data.ipynb  2024-12-29 try_using_eoreader.ipynb  Demo ASF Data Classes.ipynb
notebooks/.ipynb_checkpoints/: 2024-11-02 earth-engine-explore-checkpoint.ipynb  2024-11-03 asf-search-SAR-mapping-checkpoint.ipynb
src/asf_analysis/: __init__.py  asf_data.py
tests/asf_analysis/: test_asf_data.py
