[tool.poetry]
name = "earth-exploration"
version = "0.1.0"
description = "Geospatial data analysis sandbox"
authors = ["alakocy <alakocy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
geopandas = "^1.0.1"
earthengine-api = "^1.2.0"
geemap = "^0.35.1"
folium = "^0.18.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
asf-search = "^8.0.1"
cartopy = "^0.24.1"
rasterio = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
